[project]
name = "oterm"
version = "0.14.7"
description = "The terminal client for Ollama."
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "aiosql>=14.1,<15",
    "aiosqlite>=0.22.0,<0.23",
    "fastmcp>=2.14.1,<2.15",
    "ollama>=0.6.1,<0.7",
    "packaging>=25.0,<26",
    "pillow>=12.0.0,<13",
    "pydantic>=2.12.5,<2.13",
    "python-dotenv>=1.0.1",
    "textual>=6.11.0,<6.12",
    "textual-image>=0.8.4,<0.9.0",
    "textual-speedups>=0.2.0",
    "textualeffects>=0.2.0",
    "typer>=0.20.1,<0.21",
]

[project.urls]
Homepage = "https://github.com/ggozad/oterm"
Repository = "https://github.com/ggozad/oterm"
Issues = "https://github.com/ggozad/oterm/issues"
Documentation = "https://ggozad.github.io/oterm/"

[project.scripts]
oterm = "oterm.cli.oterm:cli"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pdbpp",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.3",
    "textual-dev>=1.7.0",
    "homebrew-pypi-poet>=0.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
]

[tool.uv]

[tool.uv.sources]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "I",
] # Enable Flake's "E" and "F" codes by default and "I" for sorting imports
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401", "F403"] }
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/screenshots", "/examples"]

[tool.hatch.build.targets.wheel]
only-packages = true
